--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "comnipl",
+  "name": "comnipl_web",
+  "version": "1.0.0",
+  "description": "```sh npm create astro@latest -- --template minimal ```",
   "type": "module",
-  "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "echo \"Error: no dev specified\" && exit 1"
   },
-  "dependencies": {
-    "astro": "^4.16.5",
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/comnipl/website.git"
+  },
+  "author": "tukiminya",
+  "bugs": {
+    "url": "https://github.com/comnipl/website/issues"
+  },
+  "homepage": "https://github.com/comnipl/website#readme",
+  "devDependencies": {
+    "typescript": "catalog:"
   }
 }
