--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "```sh npm create astro@latest -- --template minimal ```",
   "type": "module",
   "scripts": {
-    "dev": "echo \"Error: no dev specified\" && exit 1"
+    "dev": "pnpm --filter @comnipl/* run dev",
+    "modify": "biome check --write ."
   },
   "repository": {
     "type": "git",
