--- a/packages/community/package.json
+++ b/packages/community/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.5",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.5",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "catalog:"
   }
 }
