--- a/packages/community/package.json
+++ b/packages/community/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "animejs": "^3.2.2",
     "astro": "^4.16.5",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.14",
     "typescript": "catalog:"
+  },
+  "devDependencies": {
+    "@types/animejs": "^3.1.12"
   }
 }
